# nwt

./: .coveragerc  .gitignore  .style.yapf  CHANGELOG.rst  Pipfile  README.rst  dodo.py  requirements.txt  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst
src/nwt/: __init__.py  __main__.py  cmd.py  data.py  skeleton.py
src/nwt/cmd/: __init__.py  fileparser.py  inputparser.py  outputparser.py
src/nwt/utils/: __init__.py  dir.py  path.py  pylev.py
tests/: conftest.py  test_fileparser.py  test_inputparser.py  test_skeleton.py
